--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@libp2p/websockets": "^8.0.16",
     "@libp2p/webtransport": "^4.0.20",
     "fs-extra": "11.1.1",
+    "helia": "^4.0.2",
     "libp2p": "^1.2.4",
     "uint8arrays": "4.0.6"
   },
