--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
+    "@helia/strings": "^3.0.1",
     "@libp2p/autonat": "^1.0.13",
     "@libp2p/bootstrap": "^10.0.16",
     "@libp2p/circuit-relay-v2": "^1.0.16",
